--- a/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
+++ b/devtools/client/webconsole/new-console-output/test/mochitest/browser.ini
@@ -1817,6 +1817,14 @@ browser_jsterm_popup
 js
 ]
 [
+browser_jsterm_selfxss
+.
+js
+]
+subsuite
+=
+clipboard
+[
 browser_netmonitor_shows_reqs_in_webconsole
 .
 js
@@ -1861,55 +1869,6 @@ bits
 #
 Bug
 1390001
-[
-browser_webconsole_autocomplete_and_selfxss
-.
-js
-]
-subsuite
-=
-clipboard
-skip
--
-if
-=
-true
-#
-Bug
-1404850
-#
-old
-console
-skip
--
-if
-=
-(
-os
-=
-=
-'
-linux
-'
-&
-&
-bits
-=
-=
-32
-&
-&
-debug
-)
-#
-bug
-1328915
-disable
-linux32
-debug
-devtools
-for
-timeouts
 [
 browser_webconsole_autocomplete_crossdomain_iframe
 .
