Bug 1894213 - [wdspec] Update expecations for tests causing "Failed to decode response from marionette" errors on Android. r=webdriver-reviewers,jdescottes
This reverts parts of the recent meta data clean-up which is causing crashes on Android that we should continue to ignore for now until the underlying issue has been resolved.

Differential Revision: https://phabricator.services.mozilla.com/D224251

UltraBlame original commit: 5f5ca231643e979f8d1599dda0d732d5566c83a4

--- a/testing/web-platform/meta/webdriver/tests/classic/perform_actions/sequence.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/perform_actions/sequence.py.ini
@@ -1,5 +1,5 @@
 [
-interactability
+sequence
 .
 py
 ]
@@ -36,9 +36,3 @@ android
 OK
 ERROR
 ]
-[
-test_element_not_visible_overflow_hidden
-]
-expected
-:
-FAIL
