--- a/testing/web-platform/meta/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html.ini
+++ b/testing/web-platform/meta/pointerevents/pointerevent_sequence_at_implicit_release_on_click.html.ini
@@ -41,6 +41,28 @@ expected
 :
 NOTRUN
 [
+pen
+Boundary
+events
+are
+emitted
+after
+lostpointercapture
+]
+expected
+:
+NOTRUN
+[
+No
+extra
+events
+are
+emitted
+]
+expected
+:
+NOTRUN
+[
 pointerevent_sequence_at_implicit_release_on_click
 .
 html
